--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "mongodb": "^5.3.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   }
