--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "dev": "nodemon listen.js"
+    "dev": "node listen.js"
   },
   "author": "",
   "license": "ISC",
